Revert "Use min-height on content cards to prevent clipping"
This reverts commit 21cfafb1899a1e8e0ff39823bdb5433b76c258fc.

--- a/src/components/careers/styles.module.css
+++ b/src/components/careers/styles.module.css
@@ -35,7 +35,7 @@
 
 .interview_card {
   width: 280px;
-  min-height: 300px;
+  height: 300px;
   background-color: var(--ifm-background-color);
   border-radius: 10px;
   box-shadow: var(--ifm-shadow-card);
